# geode-garage-utilities

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json  testgame.ps1
.github/workflows/: build.yml
data/: author-data  author-json-to-cpp.py  category-data  category-json-to-cpp.py  check-element-separation.py  check-item-completeness.py  check-valid-buckets-for-authors.py  check-valid-buckets-for-categories.py  data-to-json.py  generate.ps1
include/: constants.hpp  devtools-api.hpp  iconkit.hpp  logic.hpp
include/popups/: AuthorFilterPopup.hpp  CategoryFilterPopup.hpp  FilterAndSortPopup.hpp  FilterPopup.hpp  OptionsPopup.hpp  SortPopup.hpp
include/utils/: BoundCCMenu.hpp  CCMenuItemTogglerSpoof.hpp  IconButtonSpriteNoText.hpp  LinkedCCMenu.hpp  SortIconButtonSprite.hpp
src/: debug.cpp  iconkit.cpp  logic.cpp  main.cpp
src/constants/: authors.cpp  categories.cpp  other.cpp
src/hooks/: GJGarageLayer.cpp  GJItemIcon.cpp  GameManager.cpp  ItemInfoPopup.cpp  PurchaseItemPopup.cpp
src/popups/: AuthorFilterPopup.cpp  CategoryFilterPopup.cpp  FilterAndSortPopup.cpp  FilterPopup.cpp  OptionsPopup.cpp  SortPopup.cpp
src/utils/: BoundCCMenu.cpp  CCMenuItemTogglerSpoof.cpp  IconButtonSpriteNoText.cpp  LinkedCCMenu.cpp  SortIconButtonSprite.cpp
